--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,33 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* Đặt màu sắc và độ rộng cho scrollbar */
+::-webkit-scrollbar {
+    width: 12px !important; /* Chiều rộng của thanh cuộn */
+}
+
+/* Đặt chiều cao cho thanh cuộn ngang */
+::-webkit-scrollbar-thumb {
+    height: 50px !important; /* Chiều cao của thumb trong thanh cuộn dọc */
+}
+/* Đặt màu nền cho thanh scrollbar */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Màu cho phần di chuyển (thumb) của scrollbar */
+::-webkit-scrollbar-thumb {
+    background-color: #888; /* Màu thanh cuộn */
+    border-radius: 10px; /* Bo tròn các góc */
+    border: 2px solid #f1f1f1; /* Đường viền của thanh cuộn */
+}
+
+/* Màu khi hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #3b667e #f1f1f1; /* thumb màu #888, track màu #f1f1f1 */
+}
