--- a/src/component/Navbar/CustomNavbar.css
+++ b/src/component/Navbar/CustomNavbar.css
@@ -43,6 +43,13 @@
 /* .drop-css{
     margin-left: 20px;
 } */
+.drop-css {
+  width: 150px;
+}
+.dropdown-menu {
+  width: 230px;
+  height: 150px;
+}
 .drop-css .dropdown-toggle::after {
   color: white;
 }
