--- a/src/component/Card/Card.css
+++ b/src/component/Card/Card.css
@@ -1,3 +1,9 @@
 .card {
     cursor: pointer;
 }
+.card-img-overlay {
+    padding-bottom: 20px !important;
+}
+.card-text {
+    padding-bottom: 22px
+}
