--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -7,6 +7,11 @@
     width: 1300px;
     margin: 0 auto;
 }
+.footer-top {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 .content-left {
     display: flex;
     align-items: center;
@@ -89,7 +94,7 @@
     align-items: center;
     gap: 10px;
 }
-.like li{
+.like li {
     font-weight: bold;
 }
 .like button {
@@ -102,10 +107,84 @@
     padding: 3px 5px;
     border-radius: 2px;
 }
+.like-left {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
 .social-icon {
     padding-bottom: 20px;
     display: flex;
     margin-top: 10px;
     gap: 20px;
     cursor: pointer;
+}
+@media (max-width: 768px) {
+    .footer-top {
+        display: none !important;
+    }
+    .content-left {
+        display: none !important;
+    }
+    .content-right {
+        padding: 40px 0px 0px 30px;
+    }
+    .footer-bottom {
+        display: flex;
+        justify-content: flex-start;
+        padding-left: 30px;
+    }
+    .footer-bottom-left {
+        display: none !important;
+    }
+    .like {
+        padding-left: 30px;
+        margin-top: 10px;
+    }
+    .like-left {
+        display: flex !important;
+        gap: 10px;
+    }
+    .social-icon {
+        padding-left: 30px;
+    }
+}
+/* Mobile */
+@media (max-width: 576px) {
+    .container-footer {
+        width: 400px;
+    }
+    .footer-top {
+        display: none !important;
+    }
+    .content-left {
+        display: none !important;
+    }
+    .content-right {
+        padding: 40px 0px 0px 30px;
+    }
+    .footer-bottom {
+        display: flex;
+        justify-content: flex-start;
+        padding-left: 30px;
+    }
+    .footer-bottom-left {
+        display: none !important;
+    }
+    .like {
+        padding-left: 30px;
+        margin-top: 10px;
+    }
+    .social-icon {
+        padding-left: 30px;
+    }
+    .like {
+        width: 576px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .like-left {
+        display: flex !important;
+        gap: 10px;
+    }
 }
