--- a/src/component/List-Tour/ListTour.css
+++ b/src/component/List-Tour/ListTour.css
@@ -11,7 +11,7 @@
 .center-bottom-card {
     display: flex;
     flex-direction: column;
-    gap: 20px; 
+    gap: 20px;
 }
 .card-center,
 .card-bottom {
@@ -163,4 +163,9 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
+}
+@media (max-width: 1400px) {
+    .count-tour {
+        display: none;
+    }
 }
