--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -47,7 +47,7 @@
     gap: 10px;
     white-space: nowrap;
 }
-.hotline-phone h3 {
+.hotline-phone h5 {
     color: #f79321;
     font-weight: bold;
     display: flex;
@@ -118,6 +118,12 @@
     margin-top: 10px;
     gap: 20px;
     cursor: pointer;
+}
+.address-text {
+    font-size: 17px;
+}
+.like-right-content {
+
 }
 @media (max-width: 768px) {
     .footer-top {
