--- a/src/component/Banner/Banner.css
+++ b/src/component/Banner/Banner.css
@@ -275,6 +275,7 @@
         height: 40px;
     }
     .icon-big-input {
+        color: #333;
         height: 40px;
         font-size: 18px;
     }
